tests/NormalTests/paczka1/fuzzy1/86040298.err
Error in line 1: A244 A244 30,3
Error in line 7: W8AUs6L8PBQ S904 76,0
Error in line 5: A244 A991 1,5
Error in line 24: IYFKBZuf A991 -4,5
Error in line 14: IYFKBZuf A991 58,1
Error in line 23: vDp1ho4F7 S321 181,0
Error in line 33: vDp1ho4F7 A991 72,0
